[project]
name = "document-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
